--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
         "grunt-contrib-watch": "~0.5.3",
         "grunt-contrib-nodeunit": "~0.2.2",
         "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-uglify": "~0.2.7",
-        "yuidocjs": "~0.3.50",
+        "yuidocjs": "~0.3.50"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
