--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dependencies": {
     },
     "devDependencies": {
+        "underscore": "1.7.0",
+        "lodash": "2.4.3",
         "grunt": "~0.4.2",
         "grunt-cli": "~0.1.13",
         "grunt-contrib-jshint": "~0.7.2",
