--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "grunt-contrib-watch": "~0.5.3",
         "grunt-contrib-nodeunit": "~0.2.2",
         "grunt-contrib-concat": "~0.3.0",
-        "yuidocjs": "~0.3.50"
+        "yuidocjs": "0.6.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
