--- a/package.json
+++ b/package.json
@@ -30,13 +30,9 @@
     "devDependencies": {
         "underscore": "1.7.0",
         "lodash": "2.4.1",
-        "grunt": "~0.4.2",
-        "grunt-cli": "~0.1.13",
-        "grunt-contrib-jshint": "~0.7.2",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-nodeunit": "~0.2.2",
-        "grunt-contrib-concat": "~0.3.0",
-        "yuidocjs": "~0.3.50"
+        "nodeunit": "0.9.1",
+        "yuidocjs": "0.8.1",
+        "source-map-support": "0.3.2"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
